--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portafolio Pablo Luna</title>
 </head>
 <body>
+    <ul>
+        <li>Inicio</li>
+        <li>Juegos</li>
+        <li>Noticias</li>
+        <li>Contacto</li>
+    </ul>
     
 </body>
 </html>
