Agregando lista Avances

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li>Inicio</li>
         <li>Juegos</li>
         <li>Noticias</li>
+        <li>Avances</li>
         <li>Contacto</li>
     </ul>
     
