Agregando en la lista Proyecto

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li>Noticias</li>
         <li>Avances</li>
         <li>Contacto</li>
+        <li>Proyectos</li>
     </ul>
     
 </body>
