Agregando en la lista de juegos y entretenimiento

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <ul>
         <li>Inicio</li>
-        <li>Juegos</li>
+        <li>Juegos y Entretenimiento</li>
         <li>Noticias</li>
         <li>Avances</li>
         <li>Contacto</li>
