Corrigiendo la lista inicio más portada

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-        <li>Inicio</li>
+        <li>Inicio y Portada</li>
         <li>Juegos y Entretenimiento</li>
         <li>Noticias</li>
         <li>Avances</li>
