Revert "Cambiando el nombre de la lista Noticias y Novedades"
This reverts commit cbadae3baa59cadae14433099b2288a28ad33f5f.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li>Inicio y Portada</li>
         <li>Juegos y Entretenimiento</li>
-        <li>Noticias y Novedades</li>
+        <li>Noticias</li>
         <li>Avances</li>
         <li>Contacto</li>
         <li>Proyectos</li>
