Modificando el nombre de Proyecto

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>Noticias y Novedades</li>
         <li>Avances</li>
         <li>Contacto</li>
-        <li>Proyectos</li>
+        <li>Proyectos Introducción</li>
     </ul>
     
 </body>
