Modificando el nombre de la lista Avances

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Inicio y Portada</li>
         <li>Juegos y Entretenimiento</li>
         <li>Noticias y Novedades</li>
-        <li>Avances</li>
+        <li>Avances de Infraestructura</li>
         <li>Contacto</li>
         <li>Proyectos Introducción</li>
     </ul>
